Suppress JDK 24+ sun.misc.Unsafe warning from the ktlint worker
The Kotlin compiler embedded in ktlint calls sun.misc.Unsafe::objectFieldOffset,
so every lintKotlin/formatKotlin run on JDK 24+ prints a terminal deprecation
warning. ktlint fixed this for its CLI launcher scripts only, which the worker
never goes through.

Pass --sun-misc-unsafe-memory-access=allow to the worker JVM on JDK 24+, and
expose it as a workerJvmArgs property so build authors can add their own
arguments or drop the default once the JDK stops accepting the option.